[EFL][WK2] REGRESSION(r143582): API test EWK2UnitTestBase.ewk_view_contents_size_changed failing https://bugs.webkit.org/show_bug.cgi?id=110608

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2013-03-06
Reviewed by Kenneth Rohde Christiansen.

Test was expecting ContentsSizeChanged signal from ViewClientEfl, but
WebView was not calling client callback if useFixedLayout() is true.

This patch prevent early return if useFixedLayout() is true and call
client callback didChangeContentsSize(), which will emit the signal.

* UIProcess/efl/ViewClientEfl.cpp:
(WebKit::ViewClientEfl::didChangeContentsSize):
* UIProcess/efl/WebView.cpp:
(WebKit::WebView::didChangeContentsSize):

Canonical link: https://commits.webkit.org/129988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144975 268f45cc-cd09-0410-ab3c-d52691b4dbfc